--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,34 +2,36 @@ name: Playwright Tests
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 20
 
       - name: Install dependencies
         run: npm install
 
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
-
       - name: Run Playwright tests
-        run: npx playwright test --reporter=html
+        run: npx playwright test
 
-      - name: Upload Playwright report
+      - name: Generate Allure Report
+        run: |
+          npm install -g allure-commandline
+          npx allure generate ./allure-results --clean -o ./allure-report
+        continue-on-error: true
+
+      - name: Upload Allure Report
         uses: actions/upload-artifact@v3
         with:
-          name: playwright-report
-          path: playwright-report/
+          name: allure-report
+          path: ./allure-report
