--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "test": "npx playwright test",
+  "allure:generate": "allure generate ./allure-results --clean -o ./allure-report",
+  "allure:open": "allure open ./allure-report"
+}
+,
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.55.1"
+    "@playwright/test": "^1.55.1",
+    "allure-playwright": "^3.4.1"
   }
 }
